k8s/apps/devops-app/base/policies/enforce-resource-limits-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: enforce-resource-limits
spec:
  failurePolicy: Fail
  validations:
    - expression: | 
        object.spec.template.spec.containers.all(container,
        has(container.resources.limits) &&
        has(container.resources.limits.memory) &&
        has(container.resources.limits.cpu))
      message: "Containers must specify memory and CPU resource limits."
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
