k8s/apps/devops-app/base/policies/warn-on-image-pull-secrets-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: warn-on-image-pull-secrets
spec:
  failurePolicy: Ignore
  validations:
    - expression: >
        object.spec.template.spec.containers.all(
          container, container.image.startsWith("pnxedudevops") ?
          object.spec.template.spec.imagePullSecrets.exists(secret, secret.name == "regcred") : true
        )
      message: "Images pulled from pnxedudevops should specify regcred pull secret in order to be pulled properly."
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
