k8s/apps/devops-app/base/policies/warn-on-latest-tag-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: warn-on-latest-tag
spec:
  failurePolicy: Ignore
  validations:
    - expression: "!(object.spec.template.spec.containers[0].image.matches('.*-latest$'))"
      message: "Using the 'latest' tag is discouraged. Consider using a version-specific tag."
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
